# hpc_bench

./: .gitignore  README.md  pyproject.toml  pytest.ini
docs/: arch.md
examples/rmsnorm/: definition.json  solution_pytorch.json  workload.jsonl
examples/rmsnorm/cuda_cpp/: kernel.cu  solution.json
examples/rmsnorm/cudnn/: kernel.cu  solution.json
examples/rmsnorm/cute_dsl/: kernel.py  solution.json
examples/rmsnorm/cutile/: kernel.py  solution.json
examples/rmsnorm/cutlass/: kernel.cu  solution.json
examples/rmsnorm/pytorch/: kernel.py  solution.json
examples/rmsnorm/tilelang/: kernel.py  solution.json
examples/rmsnorm/triton/: kernel.py  solution.json
scripts/: run_dataset.py
skills/hpc-bench/: SKILL.md
skills/openclaw-hpc-bench/: SKILL.md
src/hpc_bench/: __init__.py  cli.py
src/hpc_bench/core/: __init__.py
src/hpc_bench/core/bench/: __init__.py  config.py  correctness.py  io.py  timing.py
src/hpc_bench/core/data/: __init__.py  base_model.py  definition.py  dtypes.py  json_utils.py  solution.py  trace.py  workload.py
src/hpc_bench/driver/: __init__.py  problem_packager.py
tests/: README.md  __init__.py  run_tests.sh
tests/e2e/: __init__.py  test_cuda_rmsnorm.py  test_rmsnorm_example.py  test_rmsnorm_optional_backends.py  test_tilelang_rmsnorm.py  test_triton_rmsnorm.py
