[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hpc-bench"
version = "0.1.0"
description = "Independent GPU kernel benchmark framework compatible with SOL-ExecBench schema."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "torch>=2.0",
    "click>=8.0",
    "rich>=13.0",
    "pydantic>=2.0",
    "safetensors>=0.4",
    "numpy>=1.24",
]

[project.optional-dependencies]
cuda = ["nvidia-cuda-runtime-cu12"]
triton = ["triton>=2.3"]

[project.scripts]
hpc-bench = "hpc_bench.cli:main"
sol-execbench = "hpc_bench.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
